[tool.black]
target-version = ['py38']

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]

[tool.poetry]
name = "aio-tcpwave"
packages = [
   {include = "aiotcpwave"}
]
license = "Apache-2.0"
version = "0.0.2"
description = "AsyncIO client for TCPWave"
authors = ["Jeremy Schulman <jeremy.schulman@mlb.com>"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.17.1"
tenacity = "^7.0.0"
bidict = "^0.21.2"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
black = "^20.8b1"
flake8 = "^3.9.1"
flake8-breakpoint = "^1.1.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.15.0"
asynctest = "^0.13.0"
tox = "^3.23.0"
pre-commit = "^2.12.1"
interrogate = "^1.3.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
